# handler/user/getUser.go
@@ -3,19 +3,37 @@ package user
 import (
 	"net/http"
 
-	"github.com/gabrielfmcoelho/abare-api/config"
+	"github.com/gabrielfmcoelho/abare-api/handler"
 	"github.com/gabrielfmcoelho/abare-api/schemas"
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary Get a user
+// @Description Get a user by ID
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id query string true "User ID"
+// @Success 200 {object} HandlerUserResponse
+// @Failure 400 {object} handler.ErrorResponse
+// @Failure 404 {object} handler.ErrorResponse
+// @Router /user/{id} [get]
 func GetUserHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
-	var user schemas.User
-
-	if err := config.GetSQLite().First(&user, id).Error; err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+	if id == "" {
+		handler.Logger.Error("User ID not provided")
+		handler.SendError(ctx, http.StatusBadRequest, errParamIsRequired("id", "queryParameter").Error())
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"user": user})
+	user := schemas.User{}
+
+	if err := handler.Db.First(&user, id).Error; err != nil {
+		handler.Logger.Error("User not found", err)
+		handler.SendError(ctx, http.StatusNotFound, "User not found")
+	}
+
+	handler.SendSuccess(ctx, "User found successfully", user)
 }
