# handler/user/response.go
@@ -1,24 +1,15 @@
 package user
 
 import (
-	"fmt"
-	"net/http"
-
-	"github.com/gin-gonic/gin"
+	"github.com/gabrielfmcoelho/abare-api/schemas"
 )
 
-func sendError(ctx *gin.Context, code int, msg string) {
-	ctx.Header("Content-type", "application/json")
-	ctx.JSON(code, gin.H{
-		"message":   msg,
-		"errorCode": code,
-	})
+type HandlerUserResponse struct {
+	Message string               `json:"message"`
+	Data    schemas.UserResponse `json:"data"`
 }
 
-func sendSuccess(ctx *gin.Context, op string, data interface{}) {
-	ctx.Header("Content-type", "application/json")
-	ctx.JSON(http.StatusOK, gin.H{
-		"message": fmt.Sprintf("operation from handler: %s successfull", op),
-		"data":    data,
-	})
+type HandlerUsersResponse struct {
+	Message string                 `json:"message"`
+	Data    []schemas.UserResponse `json:"data"`
 }
