# router/routes.go
@@ -2,27 +2,21 @@ package router
 
 import (
 	"github.com/gabrielfmcoelho/abare-api/handler"
+	"github.com/gabrielfmcoelho/abare-api/handler/user"
 	"github.com/gin-gonic/gin"
-
-	docs "github.com/gabrielfmcoelho/abare-api/docs"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func initializeRoutes(router *gin.Engine) {
-	handler.InitHandler()
+func InitializeRoutes(router *gin.Engine) {
+	handler.InitializeHandler()
 	// Set up routes
 	basePath := "/api/v1"
-	docs.SwaggerInfo.BasePath = basePath
 	v1 := router.Group(basePath)
 	{
-		v1.GET("/users", handler.GetUsersHandler)
-		v1.GET("/user/:id", handler.GetUserHandler)
-		v1.POST("/user", handler.CreateUserHandler)
-		v1.PUT("/user/:id", handler.UpdateUserHandler)
-		v1.DELETE("/user/:id", handler.DeleteUserHandler)
-		v1.POST("/login", handler.LoginHandler)
+		v1.GET("/users", user.GetUserHandler)
+		v1.GET("/user/:id", user.GetUserHandler)
+		v1.POST("/user", user.CreateUserHandler)
+		v1.PUT("/user/:id", user.UpdateUserHandler)
+		v1.DELETE("/user/:id", user.DeleteUserHandler)
+		v1.POST("/login", user.LoginHandler)
 	}
-	// Initialize Swagger
-	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
